# flatpakmgr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-20-flatpakmgr-ratatui-implementation-plan.md
docs/superpowers/specs/: 2026-06-20-flatpakmgr-ratatui-design.md
src/: config.rs  lib.rs  main.rs  telemetry.rs
src/app/: input.rs  mod.rs  mode.rs
src/app/tabs/: apps.rs  history.rs  install.rs  mod.rs  remotes.rs  runtimes.rs
src/flatpak_service/: error.rs  job.rs  mod.rs  parse.rs  types.rs
src/ui/: layout.rs  list_helper.rs  mod.rs  status_bar.rs  toast.rs
src/ui/modals/: confirm.rs  help.rs  jobs.rs  mod.rs  permissions.rs
src/ui/tabs/: apps.rs  history.rs  install.rs  mod.rs  remotes.rs  runtimes.rs
tests/: job_progress_tests.rs  parse_tests.rs  service_smoke.rs  state_tests.rs  ui_tests.rs
tests/parse_fixtures/: history.txt  info_zen.txt  list_apps.txt  list_runtimes.txt  progress_install.txt  progress_no_pct.txt  remotes.txt
