[package]
name = "flatpakmgr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
directories = "6"
futures = "0.3"
indexmap = "2"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[lib]
name = "flatpakmgr"
path = "src/lib.rs"

[[bin]]
name = "flatpakmgr"
path = "src/main.rs"